[package]
name = "run-in-roblox"
description = "Run stuff inside Roblox Studio"
version = "0.2.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
repository = "https://github.com/rojo-rbx/run-in-roblox"
license = "MIT"
readme = "README.md"

[lib]
name = "run_in_roblox"
path = "src/lib.rs"

[[bin]]
name = "run-in-roblox"
path = "src/main.rs"

[dependencies]
clap = "2.32.0"
env_logger = "0.6.0"
futures = "0.1.25"
hyper = "0.12.24"
log = "0.4.6"
rbx_binary = "0.4.1"
rbx_dom_weak = "1.9.0"
rbx_xml = "0.11.1"
roblox_install = "0.2.2"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
tempfile = "3.0.7"
colored = "1.8"

[profile.dev]
opt-level = 1
