[package]
name = "run-in-roblox"
description = "Run stuff inside Roblox Studio"
version = "0.2.0"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
repository = "https://github.com/rojo-rbx/run-in-roblox"
license = "MIT"
readme = "README.md"

[lib]
name = "run_in_roblox"
path = "src/lib.rs"

[[bin]]
name = "run-in-roblox"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
colored = "1.9.3"
env_logger = "0.7.1"
futures = "0.1.25"
hyper = "0.12.35"
log = "0.4.8"
rbx_binary = "0.5.0"
rbx_dom_weak = "1.10.1"
rbx_xml = "0.11.4"
roblox_install = "0.2.2"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
tempfile = "3.1.0"
